Remove perpetual learner sentence

--- a/index.html
+++ b/index.html
@@ -108,12 +108,9 @@
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
 							    I have a passion for creative marketing and growth hacking because I like to see interesting and innovative ideas succeed. It's witnessing the fruition and being part of the fulfilment of a project that motivates me. 
-							</p>
+							</p>							
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-							    I’m a perpetual learner, but which growth hacker isn’t?
-							</p>
-							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								I have 10+ years’ experience wearing many different coloured hats: Branding, SEO, CRM, web design, data metrics/analytics, Adwords, A/B testing, UI/UX and ecommerce.
+								I'm a perpetual learner with 10+ years’ experience wearing many different coloured hats: Branding, SEO, CRM, web design, data metrics/analytics, Adwords, A/B testing, UI/UX and ecommerce.
 							</p>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
 								 I'm proud to claim this full-stack marketing outfit with certifications from <a href="https://support.google.com/partners/answer/3154326?hl=en-GB" class="goto-social" target="_blank">Google</a>, <a href="https://academy.hubspot.com/certification" class="goto-social" target="_blank">Hubspot</a> & <a href="https://www.facebook.com/blueprint/certification" class="goto-social" target="_blank">Facebook Blueprint</a>
