--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">GOOGLE ANALYTICS</span>
+									<span class="progress-cat">ANALYTICS/ADWORDS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
@@ -195,12 +195,12 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">GOOGLE ADWORDS</span>
+									<span class="progress-cat">AHREFS/SCREAMING FROG</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="82">
-													<strong><i>82</i>%</strong>
+												<span data-width="87">
+													<strong><i>87</i>%</strong>
 												</span>	
 											</div>
 										</div>	
